agrego envio de email al registrarse y corrijo errores del buscador sin estar logueado

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -189,7 +189,7 @@
         <section class="h-100 row py-2 flex-column flex-md-row align-items-md-center">
             <div class="col logo-footer text-center mb-3 logo-footer">
                 <img src="/assets/logo 3.png" alt="logo" />
-                <br><small class="text-white">L-L-A-M Informática&copy; 2023</small>
+                <br><small class="text-white">Store NOTE 💻&copy; 2023</small>
             </div>
             <div class="col text-white text-center align-items-around d-none d-md-block">
                 <a href="../pages/error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
