--- a/pages/login.html
+++ b/pages/login.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-<meta charset="UTF-8" />
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Venta de notebook" />
-    <meta name="author" content="LLAM" />
+    <meta name="author" content="STORE NOTE" />
     <meta name="keywords" content="notebook, maquinas, laptops, shop, store, tienda" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="shortcut icon" href="../assets/favicon.png" type="favicon/png" />
-
-    <title>L-L-A-M Informática</title>
+    <link rel="shortcut icon" href="./assets/favicon.png" type="favicon/png" />
+    <title>Store NOTE 💻</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <script src="https://smtpjs.com/v3/smtp.js">
+</script>
 </head>
 
 <body class="vh-100 d-flex flex-column color-sec">
@@ -25,7 +24,7 @@
                     <img src="../assets/logo 3.png" alt="Logo de L-L-A-M" />
                 </a>
                 <div class="d-sm-block d-lg-none">
-                    <h1 class="titulo fs-3">LLAM INFORMATICA</h1>
+                    <h1 class="titulo fs-3">Store NOTE 💻</h1>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -167,7 +166,7 @@
         <section class="h-100 row py-2 flex-column flex-md-row align-items-md-center">
             <div class="col logo-footer text-center mb-3 logo-footer">
                 <img src="/assets/logo 3.png" alt="logo" />
-                <br><small class="text-white">L-L-A-M Informática&copy; 2023</small>
+                <br><small class="text-white">Store NOTE 💻&copy; 2023</small>
             </div>
             <div class="col text-white text-center align-items-around d-none d-md-block">
                 <a href="../pages/error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
