--- a/pages/admin.html
+++ b/pages/admin.html
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark color">
         <div class="container-fluid text-center">
           <a class="navbar-brand" href="../index.html">
-            <img src="../assets/logo 3.png" alt="Logo de L-L-A-M" />
+            <img src="../assets/logo 3.png" alt="Logo de Store" />
           </a>
           <div class="d-sm-block d-lg-none">
             <h1 class="titulo fs-3">LLAM INFORMATICA</h1>
