--- a/pages/search.html
+++ b/pages/search.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="favicon/png" />
     <title>Store NOTE 💻</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark color">
             <div class="container-fluid text-center">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="./assets/logo 3.png" alt="Logo de STORE" />
+                    <img src="../assets/logo 3.png" alt="Logo de STORE" />
                 </a>
                 <div class="d-sm-block d-lg-none">
                     <h1 class="titulo fs-3">Store NOTE 💻</h1>
@@ -38,16 +38,16 @@
 <img id="avatarnavimg" src="" alt="avatarnav"><a id="miPerfilLink" class="nav-link ms-2" href="./pages/login.html">Mi Perfil</a></div>
                         </li>
                         <li id="adminpage" class="nav-item d-none">                                            
-                            <a class="nav-link" href="./pages/admin.html">Panel Admin</a>
+                            <a class="nav-link" href="./admin.html">Panel Admin</a>
                         </li>
                         <li id="login" class="nav-item">                                            
-                            <a class="nav-link" href="./pages/login.html">Iniciar Sesión</a>
+                            <a class="nav-link" href="./login.html">Iniciar Sesión</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/contact.html">Contactarse</a>
+                            <a class="nav-link" href="./contact.html">Contactarse</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/about.html">Acerca de Nosotros</a>
+                            <a class="nav-link" href="./about.html">Acerca de Nosotros</a>
                         </li>
                         <div class="collapse navbar-collapse d-block" id="navbarNavDarkDropdown">
                             <ul class="navbar-nav">
@@ -57,10 +57,10 @@
                                         Marcas
                                     </a>
                                     <ul class="dropdown-menu dropdown-menu-dark color text-center">
-                                        <li><a class="dropdown-item" href="./pages/acer.html">Acer</a></li>
-                                        <li><a class="dropdown-item" href="./pages/asus.html">Asus</a></li>
-                                        <li><a class="dropdown-item" href="./pages/hp.html">Hp</a></li>
-                                        <li><a class="dropdown-item" href="./pages/msi.html">Msi</a></li>
+                                        <li><a class="dropdown-item" href="./acer.html">Acer</a></li>
+                                        <li><a class="dropdown-item" href="./asus.html">Asus</a></li>
+                                        <li><a class="dropdown-item" href="./hp.html">Hp</a></li>
+                                        <li><a class="dropdown-item" href="./msi.html">Msi</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -97,20 +97,25 @@
             <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3" id="acerCard">
             </div>
         </div>
-        <div class="px-0 suscribirse" data-bs-toggle="modal" data-bs-target="#modal">
-            <img src="../assets/suscribirse.png" alt="logo store" />
-        </div>
-        <div class="wsp">
-            <a href="https://wa.me/" target="_blank">
-                <img src="../assets/wsp.png" alt="logo store" />
-            </a>
-        </div>
+        </section>
+            <div class="px-0 suscribirse" data-bs-toggle="modal" data-bs-target="#modal">
+                <img src="../assets/suscribirse.png" alt="logo store" />
+            </div>
+            <div class="wsp">
+                <a href="https://wa.me/" target="_blank">
+                    <img src="../assets/wsp.png" alt="logo store" />
+                </a>
+            </div>
+             <div class="d-block d-md-block d-sm-none d-lg-none cartflot p-0 pe-6">
+                <img id="cartfloat" src="../assets/shopping-cart.png" alt="icono-cart">
+            </div>
+        </section>
     </main>
     <footer class="container-fluid color d-flex flex-column justify-content-between ">
         <section class="h-100 row py-2 flex-column flex-md-row align-items-md-center">
-            <div class="col logo-footer text-center mb-3 logo-footer">
+<div class="col logo-footer text-center mb-3 logo-footer">
                 <img src="/assets/logo 3.png" alt="logo" />
-                <br><small class="text-white">L-L-A-M Informática&copy; 2023</small>
+                <br><small class="text-white">Store NOTE 💻&copy; 2023</small>
             </div>
             <div class="col text-white text-center align-items-around d-none d-md-block">
                 <a href="#" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white" aria-hidden="true"></i>
@@ -187,9 +192,9 @@
         </div>
       </div>
     </div>
-</body>
+    <script type="module" src="/js/app.js"></script>  
 <script src="/js/search.js" type="module"></script>
-<script src="/js/app.js" type="module"></script>
+</body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
