--- a/pages/admin.html
+++ b/pages/admin.html
@@ -11,9 +11,8 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="../assets/favicon.png" type="favicon/png" />
-
-    <title>L-L-A-M Informática</title>
+   <link rel="shortcut icon" href="./assets/favicon.png" type="favicon/png" />
+    <title>Store NOTE 💻</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,12 +26,12 @@
     <header class="fixed">
       <nav class="navbar navbar-expand-lg navbar-dark color">
         <div class="container-fluid text-center">
-          <a class="navbar-brand" href="../index.html">
-            <img src="../assets/logo 3.png" alt="Logo de Store" />
-          </a>
-          <div class="d-sm-block d-lg-none">
-            <h1 class="titulo fs-3">LLAM INFORMATICA</h1>
-          </div>
+               <a class="navbar-brand" href="../index.html">
+                    <img src="../assets/logo 3.png" alt="Logo de STORE" />
+                </a>
+                <div class="d-sm-block d-lg-none">
+                    <h1 class="titulo fs-3">Store NOTE 💻</h1>
+                </div>
           <button
             class="navbar-toggler"
             type="button"
@@ -52,17 +51,17 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-3">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   aria-current="page"
                   href="../index.html"
                   >Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/contact.html">Contactarse</a>
+                <a class="nav-link" href="./contact.html">Contactarse</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./pages/about.html"
+                <a class="nav-link" href="./about.html"
                   >Acerca de Nosotros</a
                 >
               </li>
@@ -85,20 +84,20 @@
                       class="dropdown-menu dropdown-menu-dark color text-center"
                     >
                       <li>
-                        <a class="dropdown-item" href="./pages/acer.html"
+                        <a class="dropdown-item" href="./acer.html"
                           >Acer</a
                         >
                       </li>
                       <li>
-                        <a class="dropdown-item" href="./pages/asus.html"
+                        <a class="dropdown-item" href="./asus.html"
                           >Asus</a
                         >
                       </li>
                       <li>
-                        <a class="dropdown-item" href="./pages/hp.html">Hp</a>
+                        <a class="dropdown-item" href="./hp.html">Hp</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="./pages/msi.html">Msi</a>
+                        <a class="dropdown-item" href="./msi.html">Msi</a>
                       </li>
                     </ul>
                   </li>
@@ -218,10 +217,10 @@
       <section
         class="h-100 row py-2 flex-column flex-md-row align-items-md-center"
       >
-        <div class="col logo-footer text-center mb-3 logo-footer">
-          <img src="/assets/logo 3.png" alt="logo" />
-          <br /><small class="text-white">L-L-A-M Informática&copy; 2023</small>
-        </div>
+   <div class="col logo-footer text-center mb-3 logo-footer">
+                <img src="../assets/logo 3.png" alt="logo" />
+                <br><small class="text-white">Store NOTE 💻&copy; 2023</small>
+            </div>
         <div
           class="col text-white text-center align-items-around d-none d-md-block"
         >
