correccion de color secundario y footer

--- a/pages/about.html
+++ b/pages/about.html
@@ -149,20 +149,20 @@
                 <img id="cartfloat" src="../assets/shopping-cart.png" alt="icono-cart">
             </div>
     </main>
-     <footer class="container-fluid color d-flex flex-column justify-content-end align-items-end align-self-end">
+      <footer class="container-fluid color d-flex flex-column justify-content-between ">
         <section class="h-100 row py-2 flex-column flex-md-row align-items-md-center">
             <div class="col logo-footer text-center mb-3 logo-footer">
                 <img src="/assets/logo 3.png" alt="logo" />
                 <br><small class="text-white">Store NOTE 💻&copy; 2023</small>
             </div>
             <div class="col text-white text-center align-items-around d-none d-md-block">
-                <a href="../pages/error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
+                <a href="./pages/error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
                         aria-hidden="true"></i> </a>
-                <a href="../pages/error404.html" target="_blank"><i
-                        class="fa fa-facebook-official fa-2x px-3 text-white" aria-hidden="true"></i></a>
-                <a href="../pages/error404.html" target="_blank"><i class="fa fa-youtube-play fa-2x px-3 text-white"
+                <a href="./pages/error404.html" target="_blank"><i class="fa fa-facebook-official fa-2x px-3 text-white"
                         aria-hidden="true"></i></a>
-                <a href="../pages/error404.html" target="_blank"><i class="fa fa-twitter fa-2x px-3 text-white"
+                <a href="./pages/error404.html" target="_blank"><i class="fa fa-youtube-play fa-2x px-3 text-white"
+                        aria-hidden="true"></i></a>
+                <a href="./pages/error404.html" target="_blank"><i class="fa fa-twitter fa-2x px-3 text-white"
                         aria-hidden="true"></i></a>
             </div>
             <div class="col text-center d-none d-lg-block">
