--- a/pages/admin.html
+++ b/pages/admin.html
@@ -211,59 +211,31 @@
         </select>
       </div>
     </main>
-    <footer
-      class="footer-container navbar navbar-fixed-bottom color d-flex flex-column justify-content-between mt-5"
-    >
-      <section
-        class="h-100 row py-2 flex-column flex-md-row align-items-md-center"
-      >
-   <div class="col logo-footer text-center mb-3 logo-footer">
-                <img src="../assets/logo 3.png" alt="logo" />
+     <footer class="container-fluid color d-flex flex-column justify-content-between ">
+        <section class="h-100 row py-2 flex-column flex-md-row align-items-md-center">
+            <div class="col logo-footer text-center mb-3 logo-footer">
+                <img src="/assets/logo 3.png" alt="logo" />
                 <br><small class="text-white">Store NOTE 💻&copy; 2023</small>
             </div>
-        <div
-          class="col text-white text-center align-items-around d-none d-md-block"
-        >
-          <a href="../pages/error404.html" target="_blank"
-            ><i
-              class="fa fa-instagram fa-2x px-3 text-white"
-              aria-hidden="true"
-            ></i>
-          </a>
-          <a href="../pages/error404.html" target="_blank"
-            ><i
-              class="fa fa-facebook-official fa-2x px-3 text-white"
-              aria-hidden="true"
-            ></i
-          ></a>
-          <a href="../pages/error404.html" target="_blank"
-            ><i
-              class="fa fa-youtube-play fa-2x px-3 text-white"
-              aria-hidden="true"
-            ></i
-          ></a>
-          <a href="../pages/error404.html" target="_blank"
-            ><i
-              class="fa fa-twitter fa-2x px-3 text-white"
-              aria-hidden="true"
-            ></i
-          ></a>
-        </div>
-        <div class="col text-center d-none d-lg-block">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3561.0316977798693!2d-65.22763021886242!3d-26.80711931665929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225c4db6ca1f6f%3A0x9e3a62d21de63927!2sBolivia%202015%2C%20San%20Miguel%20de%20Tucum%C3%A1n%2C%20Tucum%C3%A1n%2C%20Argentina!5e0!3m2!1ses-419!2ses!4v1686090329739!5m2!1ses-419!2ses"
-            width="300"
-            height="auto"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          >
-          </iframe>
-        </div>
-      </section>
+            <div class="col text-white text-center align-items-around d-none d-md-block">
+                <a href="./pages/error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
+                        aria-hidden="true"></i> </a>
+                <a href="./pages/error404.html" target="_blank"><i class="fa fa-facebook-official fa-2x px-3 text-white"
+                        aria-hidden="true"></i></a>
+                <a href="./pages/error404.html" target="_blank"><i class="fa fa-youtube-play fa-2x px-3 text-white"
+                        aria-hidden="true"></i></a>
+                <a href="./pages/error404.html" target="_blank"><i class="fa fa-twitter fa-2x px-3 text-white"
+                        aria-hidden="true"></i></a>
+            </div>
+            <div class="col text-center d-none d-lg-block">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3561.0316977798693!2d-65.22763021886242!3d-26.80711931665929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225c4db6ca1f6f%3A0x9e3a62d21de63927!2sBolivia%202015%2C%20San%20Miguel%20de%20Tucum%C3%A1n%2C%20Tucum%C3%A1n%2C%20Argentina!5e0!3m2!1ses-419!2ses!4v1686090329739!5m2!1ses-419!2ses"
+                    width="300" height="auto" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
     </footer>
-
     <!-- Modales -->
     <!-- 1 -->
     <div class="modal fade" id="userForm">
