correccion de main responsive index

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
         </nav>
     </header>
-    <main class="container-fluid d-flex flex-column">
+    <main class="container-fluid d-flex flex-column p-0">
  <div class col-10> </div>
             <section>
             <div id="carouselExampleSlidesOnly" class="carousel slide " data-bs-ride="carousel">
