--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,6 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/styles.css" />
+     <script src="https://smtpjs.com/v3/smtp.js">
+</script>
 </head>
 <body class="d-flex flex-column min-vh-100 justify-content-between align-items-center color-sec imagemain">
     <header class="fixed w-100">
@@ -97,7 +99,7 @@
             <div class="row justify-content-center w-100 m-0 h-100">
                 <div class="col-11 col-md-8 col-lg-6 col-xl-5 p-0 mt-1 mb-1">
                     <form class="">
-                        <div class="card2 color texto-color m-0 b-0 ps-1 pe-1 pt-0 pb-2 mb-2">
+                        <div class="card2 color-contact texto-color m-0 b-0 ps-1 pe-1 pt-0 pb-2 mb-2">
                             <div class="row mt-0">
                                 <div class="col-md-12 ">
                                     <h4 class="texto-color">Contactanos</h4>
@@ -121,7 +123,7 @@
                                         name="area" class="form-control input-box rm-border" required>
                                 </div>
                                 <div class="col-5 mb-0 pe- ms-3  me-1">
-                                    <p class="mb-1">Num. Celular</p><input id="celular" type="tel" minlength="6" maxlength="7"
+                                    <p class="mb-1">Num. Celular</p><input id="celular" type="tel" minlength="6" maxlength="10"
                                         placeholder="Sin 15" name="celular" class="form-control input-box rm-border"
                                         required>
                                 </div>
@@ -129,7 +131,7 @@
                             <div class="form-group d-flex row mb-3">
                                 <div class="col-12 mb-0 ms-1 ps-0 pe-2 me-1">
                                     <p class="mb-1">Correo electrónico</p> <input id="email" type="email"
-                                        minlength="10" placeholder="carolina@gmail.com" name="area"
+                                        minlength="10" placeholder="carolina@gmail.com" name="email"
                                         class="form-control input-box rm-border" required>
                                 </div>
                             </div>
@@ -165,8 +167,8 @@
                                 </div>
                             </div>
                             <div class="form-group row justify-content-center mb-0">
-                                <div class="col-md-12 text-end pe-1 mb-1"> <input type="submit" value="Enviar"
-                                        class="btn btn-block btn-purple rm-border"> </div>
+                                <div class="col-md-12 text-end pe-1 mb-1"> <input type="button" value="Enviar"
+                                        class="btn btn-block btn-purple rm-border" id="btnenviar"></div>
                             </div>
                         </div>
                     </form>
@@ -301,6 +303,7 @@
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/c2813ccf5b.js"></script>
-    <script type="module" src="/js/app.js"></script>    
+    <script type="module" src="/js/app.js"></script>
+    <script type="module" src="/js/contact.js"></script>    
 </body>
 </html>
