--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <section class="row row-cols-1 row-cols-md-2">
+            <section class="row row-cols-1 row-cols-md-2 container-fluid">
                 <!-- Las más buscadas  -->
                 <div class="col">
                     <div id="carousel" class="carousel slide" data-bs-ride="carousel">
