--- a/pages/acer.html
+++ b/pages/acer.html
@@ -13,8 +13,8 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
-<body class="color-sec p-0 m-0">
-    <header class="fixed w-100">
+<body class="color-sec p-0 m-0 d-flex justify-content-between row vh-100">
+    <header class="fixed container-fluid p-0">
         <nav class="navbar navbar-expand-lg navbar-dark color">
             <div class="container-fluid text-center">
                  <a class="navbar-brand" href="../index.html">
@@ -109,7 +109,7 @@
                 <img id="cartfloat" src="../assets/shopping-cart.png" alt="icono-cart">
             </div>
     </main>
-    <footer class="container-fluid color d-flex flex-column justify-content-between ">
+    <footer class="container-fluid color d-flex flex-column justify-content-between">
         <section class="h-100 row py-2 flex-column flex-md-row align-items-md-center">
             <div class="col logo-footer text-center mb-3 logo-footer">
                 <img src="/assets/logo 3.png" alt="logo" />
