correccion de tabla de administracion de usuarios

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -194,7 +194,7 @@
                 <tr class="table-danger d-flex">
                   <th class="col-3">Admin</th>
                   <th class="col-4">Email</th>
-                  <th class="col-2">Codigo Rec.</th>
+                  <th class="col-2">Nombre</th>
                   <th class="col-3">Acción</th>
                 </tr>
               </thead>
