--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/styles.css" />
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100 justify-content-between align-items-center color-sec">
     <header class="fixed w-100">
