--- a/pages/asus.html
+++ b/pages/asus.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body class="color-sec p-0 m-0 d-flex justify-content-between row vh-100">
-    <header class="fixed w-100 p-0">
+    <header class="fixed w-100 container-fluid p-0">
         <nav class="navbar navbar-expand-lg navbar-dark color">
             <div class="container-fluid text-center">
                  <a class="navbar-brand" href="../index.html">
