--- a/pages/search.html
+++ b/pages/search.html
@@ -13,8 +13,8 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
-<body class="color-sec p-0 m-0">
-    <header class="fixed w-100">
+<body class="color-sec p-0 m-0 d-flex justify-content-between row vh-100">
+    <header class="fixed w-100 container-fluid p-0">
         <nav class="navbar navbar-expand-lg navbar-dark color">
             <div class="container-fluid text-center">
                 <a class="navbar-brand" href="../index.html">
