correciones de page 404

--- a/pages/login.html
+++ b/pages/login.html
@@ -169,13 +169,13 @@
                 <br><small class="text-white">Store NOTE 💻&copy; 2023</small>
             </div>
             <div class="col text-white text-center align-items-around d-none d-md-block">
-                <a href="../pages/error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
+                <a href="./error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
                         aria-hidden="true"></i> </a>
-                <a href="../pages/error404.html" target="_blank"><i
+                <a href="./error404.html" target="_blank"><i
                         class="fa fa-facebook-official fa-2x px-3 text-white" aria-hidden="true"></i></a>
-                <a href="../pages/error404.html" target="_blank"><i class="fa fa-youtube-play fa-2x px-3 text-white"
+                <a href="./error404.html" target="_blank"><i class="fa fa-youtube-play fa-2x px-3 text-white"
                         aria-hidden="true"></i></a>
-                <a href="../pages/error404.html" target="_blank"><i class="fa fa-twitter fa-2x px-3 text-white"
+                <a href="./error404.html" target="_blank"><i class="fa fa-twitter fa-2x px-3 text-white"
                         aria-hidden="true"></i></a>
             </div>
             <div class="col text-center d-none d-lg-block">
