--- a/pages/admin.html
+++ b/pages/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Venta de notebook" />
-    <meta name="author" content="LLAM" />
+    <meta name="author" content="STORE NOTE" />
     <meta
       name="keywords"
       content="notebook, maquinas, laptops, shop, store, tienda"
@@ -218,13 +218,13 @@
                 <br><small class="text-white">Store NOTE 💻&copy; 2023</small>
             </div>
             <div class="col text-white text-center align-items-around d-none d-md-block">
-                <a href="./pages/error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
+                <a href="./error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
                         aria-hidden="true"></i> </a>
-                <a href="./pages/error404.html" target="_blank"><i class="fa fa-facebook-official fa-2x px-3 text-white"
+                <a href="./error404.html" target="_blank"><i class="fa fa-facebook-official fa-2x px-3 text-white"
                         aria-hidden="true"></i></a>
-                <a href="./pages/error404.html" target="_blank"><i class="fa fa-youtube-play fa-2x px-3 text-white"
+                <a href="./error404.html" target="_blank"><i class="fa fa-youtube-play fa-2x px-3 text-white"
                         aria-hidden="true"></i></a>
-                <a href="./pages/error404.html" target="_blank"><i class="fa fa-twitter fa-2x px-3 text-white"
+                <a href="./error404.html" target="_blank"><i class="fa fa-twitter fa-2x px-3 text-white"
                         aria-hidden="true"></i></a>
             </div>
             <div class="col text-center d-none d-lg-block">
