--- a/pages/about.html
+++ b/pages/about.html
@@ -13,8 +13,8 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
-<body class="color-sec p-0 m-0">
-    <header class="fixed w-100">
+<body class="color-sec p-0 m-0 vh-100 d-flex row justify-content-between">
+    <header class="fixed container p-0">
         <nav class="navbar navbar-expand-lg navbar-dark color">
             <div class="container-fluid text-center">
                  <a class="navbar-brand" href="../index.html">
@@ -92,52 +92,95 @@
             </div>
         </nav>
     </header>
-        <main class="container-fluid px-0">
-                <div class="col">
-                    <img class="d-block w-100" src="../assets/acerca-de-nosotros.webp" alt="Acerca de nosotros">
-                </div>
-                <h1 class="text-center mt-3">Acerca de nosotros</h1>
-        <div class="text-center mt-5">
-            <p class="fs-5 m-2">L-L-A-M es una empresa que nació en el año 2010 en San Miguel de Tucumán, ofreciendo productos de Computación a través de la web, la misma se diferencia por sus excelentes precios, atención personalizada y calidad en todos sus productos.</p>
-            <br>
-            <p class="fs-5 m-2">L-L-A-M tiene como objetivo satisfacer al cliente en su experiencia de compra online ofreciéndole sus diferentes servicios.</p>
+        <main class="container-fluid px-0 mb-3">
+            <!-- informacion de la empresa -->
+            <div class="container mt-5 ">
+    <div class="card">
+        <div class="card-body">
+            <h3 class="card-title">Store NOTE 💻</h3>
+            <p class="card-text">
+                <h5 class="fs-5"><b>Store Note es la empresa líder en Argentina en la venta de notebooks.</b></h5><p class="fs-6">Fundada en 2010, hemos estado proporcionando a nuestros clientes la última tecnología en computadoras portátiles desde entonces.</p>
+
+                <p class="fs-6">Nuestra visión es expandirnos en todo el país y ofrecer la mejor experiencia de compra en línea. Para lograrlo, estamos implementando los siguientes planes de expansión y mejoras:</p>
+                <p class="fs-6"><b class="text-danger">1° Ampliación de Catálogo: </b>Continuaremos ampliando nuestra gama de productos para ofrecer una selección aún más amplia de notebooks de alta calidad a precios competitivos.</p>
+                <p class="fs-6"><b class="text-danger">2° Mejora en la Experiencia del Usuario:</b>Estamos trabajando en una nueva plataforma web que brindará una navegación más fácil y una experiencia de compra más intuitiva.</p>
+                <p class="fs-6"><b class="text-danger">3° Entrega Rápida y Segura:</b>Estamos fortaleciendo nuestra red de logística para garantizar entregas rápidas y seguras en todo el país.</p>
+                <p class="fs-6"><b class="text-danger">4 Innovación Tecnológica:</b>Siempre estamos atentos a las últimas tendencias tecnológicas. Estamos explorando nuevas tecnologías, como laptops con energía solar y laptops plegables, para mantenernos a la vanguardia de la industria.</p>
+                <p class="fs-6">Nuestras fortalezas incluyen un equipo dedicado, productos de calidad, atención al cliente excepcional y una sólida presencia en el mercado. Estamos comprometidos a brindar a nuestros clientes las mejores soluciones informáticas y esperamos seguir creciendo y sirviendo a la comunidad argentina.</p>
+
+                <p class="fs-5"><b class="text-primary">¡Gracias por ser parte de la familia Store NOTE 💻!</b></p>
+            </p>
         </div>
-        <section class="container d-md-flex">
-            <div class="row my-5">
-                <div class="col">
-                    <div class="circle">
-                        <i class="fa fa-binoculars fa-3x" aria-hidden="true"></i>
-                    </div>
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Visión</h5>
-                        <p class="card-text">Ser el proveedor líder a través de la confianza generada a nuestros.</p>
-                    </div>
-                </div>
+    </div>
+</div>
+<div class="container mt-2"><h3 class="text-danger">Conoce nuestro Equipo:</h3></div>
+      <!-- tarjetas de presentacion -->
+         <div class="container pe-2">
+    <div class="row">
+      <div class="col-md-4 p-0 ps-1">
+        <div class="custom-card m-0">
+          <div class="card">
+            <div class="mt-3">
+              <img src="/assets/perfil (2).jpeg" class="card-img" alt="...">
+      <div class="card-body">
+         <div class="card-img-overlay p-0 ms-3">
+        <h3 class="card-title text-center">Leonel Sanagua</h3>
+        <h5 class="text-center">Co Fundador y Desarrollador</h5>
+      </div></div>
             </div>
-            <div class="row my-5">
-                <div class="col">
-                    <div class="circle">
-                        <i class="fa fa-line-chart fa-3x" aria-hidden="true"></i>
-                    </div>
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Misión</h5>
-                        <p class="card-text">Proveer a todos nuestro clientes, no solo de un producto, sino también de una experiencia positiva en su paso por la empresa.</p>
-                    </div>
-                </div>
+            <div class="card-back">
+              <div class="card-body">
+                <h5 class="card-title text-end">Leonel Sanagua</h5>
+                <p class="card-text text-end fs-6">Lorem ipsum dolor sit ame quam quod fugit illo corrupti facilis amet harum, assumenda, commodi enim aut quidem tempora in sunt?.</p>
+              </div>
             </div>
-            <div class="row my-5">
-                <div class="col">
-                    <div class="circle">
-                        <i class="fa fa-star fa-3x" aria-hidden="true"></i>
-                    </div>
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Valores</h5>
-                        <p class="card-text">Compromisos social, generar relaciones de honestidad, Pro-actividad y Creatividad.</p>
-                    </div>
-                </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 p-0 ps-1">
+        <div class="custom-card m-0">
+          <div class="card">
+            <div class="">
+              <img src="/assets/perfil (3).jpeg" class="card-img" alt="...">
+      <div class="card-body">
+         <div class="card-img-overlay p-0 ms-3">
+        <h3 class="card-title">Franco Garcia</h3>
+        <h5 class="">Co Fundador y Desarrollador</h5>
+      </div></div>
             </div>
-        </section>
-        <div class="px-0 suscribirse" data-bs-toggle="modal" data-bs-target="#modal">
+            <div class="card-back">
+              <div class="card-body">
+                <h5 class="card-title">Detalles 2</h5>
+                <p class="card-text">Detalles adicionales de la tarjeta 2.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 p-0 ps-1">
+         <div class="custom-card m-0">
+          <div class="card">
+            <div class="">
+              <img src="/assets/perfil (1).jpeg" class="card-img" alt="...">
+      <div class="card-body">
+         <div class="card-img-overlay p-0 ms-3">
+        <h3 class="card-title">Leonardo Zamorano</h3>
+        <h5 class="">Co Fundador y Desarrollador</h5>
+      </div></div>
+            </div>
+            <div class="card-back">
+              <div class="card-body">
+                <h5 class="card-title">Detalles 3</h5>
+                <p class="card-text">Detalles adicionales de la tarjeta 3.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- -------------------- -->
+    <div class="px-0 suscribirse" data-bs-toggle="modal" data-bs-target="#modal">
                 <img src="../assets/suscribirse.png" alt="logo store" />
             </div>
             <div class="wsp">
@@ -149,20 +192,20 @@
                 <img id="cartfloat" src="../assets/shopping-cart.png" alt="icono-cart">
             </div>
     </main>
-     <footer class="container-fluid color d-flex flex-column justify-content-end align-items-end align-self-end">
+      <footer class="footer-container container-fluid color d-flex flex-column justify-content-between ">
         <section class="h-100 row py-2 flex-column flex-md-row align-items-md-center">
-           <div class="col logo-footer text-center mb-3 logo-footer">
+            <div class="col logo-footer text-center mb-3 logo-footer">
                 <img src="/assets/logo 3.png" alt="logo" />
                 <br><small class="text-white">Store NOTE 💻&copy; 2023</small>
             </div>
             <div class="col text-white text-center align-items-around d-none d-md-block">
-                <a href="./error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
+                <a href="/pages/error404.html" target="_blank"><i class="fa fa-instagram fa-2x px-3 text-white"
                         aria-hidden="true"></i> </a>
-                <a href="./error404.html" target="_blank"><i
-                        class="fa fa-facebook-official fa-2x px-3 text-white" aria-hidden="true"></i></a>
-                <a href="./error404.html" target="_blank"><i class="fa fa-youtube-play fa-2x px-3 text-white"
+                <a href="/pages/error404.html" target="_blank"><i class="fa fa-facebook-official fa-2x px-3 text-white"
                         aria-hidden="true"></i></a>
-                <a href="./error404.html" target="_blank"><i class="fa fa-twitter fa-2x px-3 text-white"
+                <a href="/pages/error404.html" target="_blank"><i class="fa fa-youtube-play fa-2x px-3 text-white"
+                        aria-hidden="true"></i></a>
+                <a href="/pages/error404.html" target="_blank"><i class="fa fa-twitter fa-2x px-3 text-white"
                         aria-hidden="true"></i></a>
             </div>
             <div class="col text-center d-none d-lg-block">
