correccion modal admin prod

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -273,7 +273,7 @@
                     >Inserte el nombre del producto</label
                   >
 
-                  <input type="text" class="form-control" name="" id="name" />
+                  <input type="text" class="form-control" name="" id="name" required/>
                 </div>
                 <div>
                   <label for="price" class="form-label"
@@ -285,6 +285,7 @@
                     name=""
                     id="price"
                     class="form-control"
+                    required
                   />
                 </div>
                 <div>
@@ -292,7 +293,7 @@
                     >Inserte la descripcion</label
                   >
 
-                  <textarea name="" id="desc" class="form-control"></textarea>
+                  <textarea name="" id="desc" class="form-control" required></textarea>
                 </div>
 
                 <div>
@@ -303,6 +304,7 @@
                     name=""
                     id="stock"
                     class="form-control"
+                    required
                   />
                 </div>
               </div>
